kiali/kiali-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kiali-gateway
  # namespace: kiali
spec:
  selector:
    istio: ingress-gateway
  servers:
    - hosts:
        # - kiali.local.dev
        - 'kiali.hayden.com'
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: false
