kiali/kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtualservice
  # namespace: kiali
spec:
  gateways:
    - kiali-gateway
  hosts:
    # - 'kiali.local.dev'
    # - 'localhost'
    - 'kiali.hayden.com'
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali.kiali.svc.cluster.local
            port:
              number: 20001
